--- a/ressources/lang/English.xml
+++ b/ressources/lang/English.xml
@@ -18,11 +18,14 @@
 <entry key="gui_menubar_edit_menu">Edit</entry>
 <entry key="gui_menubar_edit_preferences">Preferences...</entry>
 <entry key="gui_popup_preferences_applymsg_error">Could not save preference properly.</entry>
+<entry key="gui_popup_preferences_applymsg_invalid">Invalid preference value.</entry>
 <entry key="gui_popup_preferences_applymsg_ok">Preference successfully saved.</entry>
+<entry key="gui_popup_preferences_applymsg_reset">It is recommended that you restart the application after modifying this preference value.</entry>
 <entry key="gui_popup_preferences_btn_apply">Apply</entry>
 <entry key="gui_popup_preferences_btn_cancel">Cancel</entry>
 <entry key="gui_popup_preferences_btn_restore">Restore Default</entry>
 <entry key="gui_popup_preferences_proplabel_lang">Language</entry>
+<entry key="gui_popup_preferences_proplabel_maxthreads">Maximum thread count</entry>
 <entry key="gui_popup_preferences_proplabel_path">Branches directory</entry>
 <entry key="gui_popup_preferences_title">Preferences</entry>
 <entry key="gui_popup_preferences_type_dir_dlg_btnlabel">Open</entry>
