--- a/ressources/lang/Portuguese.xml
+++ b/ressources/lang/Portuguese.xml
@@ -18,11 +18,14 @@
 <entry key="gui_menubar_edit_menu">Editar</entry>
 <entry key="gui_menubar_edit_preferences">Configurações...</entry>
 <entry key="gui_popup_preferences_applymsg_error">Não foi possível salvar configuração.</entry>
+<entry key="gui_popup_preferences_applymsg_invalid">Valor inválido de configuração.</entry>
 <entry key="gui_popup_preferences_applymsg_ok">Configuração salva com sucesso.</entry>
+<entry key="gui_popup_preferences_applymsg_reset">É recomendado reiniciar a aplicação após ter modificado esta configuração.</entry>
 <entry key="gui_popup_preferences_btn_apply">Aplicar</entry>
 <entry key="gui_popup_preferences_btn_cancel">Cancelar</entry>
 <entry key="gui_popup_preferences_btn_restore">Restaurar padrão</entry>
 <entry key="gui_popup_preferences_proplabel_lang">Idioma</entry>
+<entry key="gui_popup_preferences_proplabel_maxthreads">Número máximo de threads</entry>
 <entry key="gui_popup_preferences_proplabel_path">Diretório raiz</entry>
 <entry key="gui_popup_preferences_title">Configurações</entry>
 <entry key="gui_popup_preferences_type_dir_dlg_btnlabel">Abrir</entry>
