--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -39,5 +39,7 @@
 <entry key="gui_errmsg_incoherentdate">Timestamp de último setup incoerente</entry>
 <entry key="meta_locale">pt</entry>
 <entry key="meta_dateformat">E, dd MMM yy</entry>
-<entry key="gui_errmsg_launcher_invalidfolder">'%s' não é um diretório SVN válido.</entry>
+<entry key="gui_errmsg_launcher_invalidfolder">%s não é um diretório SVN válido.</entry>
+<entry key="gui_errmsg_nobranchrootfolder">Não foi possível acessar pasta raíz do branch %s.</entry>
+<entry key="gui_errmsg_failedsetup">Não foi possível realizar setup no branch %s</entry>
 </properties>
