--- a/resources/lang/English.xml
+++ b/resources/lang/English.xml
@@ -43,4 +43,5 @@
 <entry key="gui_errmsg_nobranchrootfolder">Could not open root folder from branch %s.</entry>
 <entry key="gui_errmsg_failedsetup">Could not setup branch %s</entry>
 <entry key="gui_errmsg_failedmake">Could not compile branch %s</entry>
+<entry key="gui_errmsg_failedcleanup">Could not clean up branch %s</entry>
 </properties>
