--- a/resources/lang/English.xml
+++ b/resources/lang/English.xml
@@ -32,17 +32,18 @@
 <entry key="gui_popup_preferences_type_dir_dlg_title">Open a directory</entry>
 <entry key="gui_popup_preferences_type_dir_panel_btnlabel">Open...</entry>
 <entry key="meta_name">English</entry>
-<entry key="gui_errmsg_launcher_emptyjob">No setup nor make job was executed.</entry>
+<entry key="gui_errmsg_launcher_emptyjob">No setup or compile routine was executed.</entry>
 <entry key="gui_lighterror_general_msg">An unexpected event occurred.</entry>
 <entry key="gui_lighterror_msg_title">Disclaimer</entry>
 <entry key="gui_branchtable_defval_lastsetup">Unknown</entry>
 <entry key="gui_errmsg_incoherentdate">Incoherent last setup timestamp</entry>
 <entry key="meta_locale">en</entry>
-<entry key="meta_dateformat">E, MMM dd, ''yy</entry>
+<entry key="meta_dateformat">MM/dd/yy</entry>
 <entry key="gui_errmsg_launcher_invalidfolder">%s is not a valid SVN folder.</entry>
 <entry key="gui_errmsg_nobranchrootfolder">Could not open root folder from branch %s.</entry>
 <entry key="gui_errmsg_failedsetup">Could not setup branch %s</entry>
 <entry key="gui_errmsg_failedmake">Could not compile branch %s</entry>
 <entry key="gui_errmsg_failedcleanup">Could not clean up branch %s</entry>
 <entry key="gui_popup_preferences_proplabel_cleanups">Pre-setup clean up cycles</entry>
+<entry key="gui_mainpanel_btnlabel_stop">Stop</entry>
 </properties>
