--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -46,4 +46,7 @@
 <entry key="gui_errmsg_failedcleanup">Não foi possível limpar (se livrar de locks) branch %s</entry>
 <entry key="gui_popup_preferences_proplabel_cleanups">Número de limpezas pré-setup</entry>
 <entry key="gui_mainpanel_btnlabel_stop">Interromper</entry>
+<entry key="gui_mainpanel_btntip_stop">Interrompe rotina de atualização da base</entry>
+<entry key="gui_mainpanel_btntip_launch">Inicializa rotina de atualização da base</entry>
+<entry key="gui_mainpanel_btntip_close">Fechar %s</entry>
 </properties>
