--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -29,7 +29,7 @@
 <entry key="gui_mainpanel_btntip_stop">Interrompe rotina de atualização da base</entry>
 <entry key="gui_menubar_about_menu">Sobre</entry>
 <entry key="gui_menubar_branch_menu">Branches</entry>
-<entry key="gui_menubar_branch_new">Novo Branch...</entry>
+<entry key="gui_menubar_branch_new">Novo...</entry>
 <entry key="gui_menubar_branch_update">Atualizar</entry>
 <entry key="gui_menubar_edit_menu">Editar</entry>
 <entry key="gui_menubar_edit_preferences">Configurações...</entry>
