--- a/resources/lang/English.xml
+++ b/resources/lang/English.xml
@@ -33,8 +33,12 @@
 <entry key="gui_menubar_branch_menu">Branches</entry>
 <entry key="gui_menubar_branch_new">New...</entry>
 <entry key="gui_menubar_branch_update">Update</entry>
+<entry key="gui_menubar_edit_make_all">Compile all branches</entry>
+<entry key="gui_menubar_edit_make_none">Compile no branches</entry>
 <entry key="gui_menubar_edit_menu">Edit</entry>
 <entry key="gui_menubar_edit_preferences">Preferences...</entry>
+<entry key="gui_menubar_edit_setup_all">Setup all branches</entry>
+<entry key="gui_menubar_edit_setup_none">Setup no branches</entry>
 <entry key="gui_popup_about_title">About</entry>
 <entry key="gui_popup_log_action_make">Make</entry>
 <entry key="gui_popup_log_action_setup">Setup</entry>
