--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -33,8 +33,12 @@
 <entry key="gui_menubar_branch_menu">Branches</entry>
 <entry key="gui_menubar_branch_new">Novo...</entry>
 <entry key="gui_menubar_branch_update">Atualizar</entry>
+<entry key="gui_menubar_edit_make_all">Compilar todas as bases</entry>
+<entry key="gui_menubar_edit_make_none">Compilar nenhuma base</entry>
 <entry key="gui_menubar_edit_menu">Editar</entry>
 <entry key="gui_menubar_edit_preferences">Configurações...</entry>
+<entry key="gui_menubar_edit_setup_all">Atualizar todas as bases</entry>
+<entry key="gui_menubar_edit_setup_none">Atualizar nenhuma base</entry>
 <entry key="gui_popup_about_title">Sobre</entry>
 <entry key="gui_popup_log_action_make">Make</entry>
 <entry key="gui_popup_log_action_setup">Setup</entry>
