--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -60,8 +60,15 @@
 <entry key="gui_popup_preferences_btn_restore">Restaurar padrão</entry>
 <entry key="gui_popup_preferences_proplabel_cleanups">Número de limpezas pré-setup</entry>
 <entry key="gui_popup_preferences_proplabel_lang">Idioma</entry>
+<entry key="gui_popup_preferences_proplabel_makecmd">Comando de compilação</entry>
 <entry key="gui_popup_preferences_proplabel_maxthreads">Número máximo de threads</entry>
 <entry key="gui_popup_preferences_proplabel_path">Diretório raiz</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlld">Make Library Debug</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mllda">Make Library Debug App</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldad">Make Library Debug App Debug</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldadmt">Make Library Debug App Debug Multi-Threaded</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldamt">Make Library Debug App Multi-Threaded</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldmt">Make Library Debug Multi-Threaded</entry>
 <entry key="gui_popup_preferences_title">Configurações</entry>
 <entry key="gui_popup_preferences_type_dir_dlg_btnlabel">Abrir</entry>
 <entry key="gui_popup_preferences_type_dir_dlg_title">Abrir um diretório</entry>
