--- a/resources/lang/_meta_.xml
+++ b/resources/lang/_meta_.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
 <entry key="version">1.0</entry>
-<entry key="name">SetMeUp</entry>
+<entry key="name">Jabuti</entry>
 <entry key="authors">Guilherme Dantas</entry>
-<entry key="repository">https://github.com/guidanoli/setmeup</entry>
+<entry key="repository">https://github.com/guidanoli/jabuti</entry>
 </properties>
