Separate Make and Setup toggles in different menus
* Added Make and Setup Menus and allocated items from Edit to their
respective menu "parents"
* Automated adding menus and menus items (see addItemsToBar)
* Small changes in lang.py

--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -35,12 +35,14 @@
 <entry key="gui_menubar_branch_menu">Branches</entry>
 <entry key="gui_menubar_branch_new">Novo...</entry>
 <entry key="gui_menubar_branch_update">Atualizar</entry>
-<entry key="gui_menubar_edit_make_all">Compilar todas as bases</entry>
-<entry key="gui_menubar_edit_make_none">Compilar nenhuma base</entry>
 <entry key="gui_menubar_edit_menu">Editar</entry>
 <entry key="gui_menubar_edit_preferences">Configurações...</entry>
-<entry key="gui_menubar_edit_setup_all">Atualizar todas as bases</entry>
-<entry key="gui_menubar_edit_setup_none">Atualizar nenhuma base</entry>
+<entry key="gui_menubar_make_all">Compilar todas as bases</entry>
+<entry key="gui_menubar_make_menu">Make</entry>
+<entry key="gui_menubar_make_none">Compilar nenhuma base</entry>
+<entry key="gui_menubar_setup_all">Atualizar todas as bases</entry>
+<entry key="gui_menubar_setup_menu">Setup</entry>
+<entry key="gui_menubar_setup_none">Atualizar nenhuma base</entry>
 <entry key="gui_notification_title">Jabuti</entry>
 <entry key="gui_popup_about_title">Sobre</entry>
 <entry key="gui_popup_log_action_make">Make</entry>
