--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -87,9 +87,10 @@
 <entry key="gui_popup_preferences_type_dir_dlg_title">Abrir um diretório</entry>
 <entry key="gui_popup_preferences_type_dir_panel_btnlabel">Abrir...</entry>
 <entry key="meta_dateformat">dd/MM/yy</entry>
-<entry key="meta_keylabel_notify_cleanup">Limpeza de locks</entry>
-<entry key="meta_keylabel_notify_make">Compilação</entry>
-<entry key="meta_keylabel_notify_setup">Atualização</entry>
+<entry key="meta_keylabel_notify_0">#name</entry>
+<entry key="meta_keylabel_notify_1">Limpeza de locks</entry>
+<entry key="meta_keylabel_notify_2">Compilação</entry>
+<entry key="meta_keylabel_notify_3">Atualização</entry>
 <entry key="meta_locale">pt</entry>
 <entry key="meta_name">Portuguese</entry>
 </properties>
