--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -7,7 +7,8 @@
 <entry key="gui_branchtable_columns_setup">Setup</entry>
 <entry key="gui_branchtable_defval_lastsetup">Desconhecido</entry>
 <entry key="gui_errhelper_155004">Na raíz da sua base, faça um SVN Cleanup para quebrar locks, um vissetup e, se requisitado, insira sua senha de usuário.</entry>
-<entry key="gui_errhelper_20033">Algum(ns) outro(s) programa(s) está(ão) operando sobre sua base. Use software from LockHunter para identificá-lo(s) e liberar os locks da base.</entry>
+<entry key="gui_errhelper_200033">Algum(ns) outro(s) programa(s) está(ão) operando sobre sua base. Use software from LockHunter para identificá-lo(s) e liberar os locks da base.</entry>
+<entry key="gui_errhelper_215004">#gui_errhelper_155004</entry>
 <entry key="gui_errmsg_accesskeylabelstringfailed">Não foi possível acessar string %s.</entry>
 <entry key="gui_errmsg_failedcleanup">Não foi possível limpar (se livrar de locks) branch %s</entry>
 <entry key="gui_errmsg_failedmake">Não foi possível compilar branch %s</entry>
