--- a/resources/lang/Portuguese.xml
+++ b/resources/lang/Portuguese.xml
@@ -2,9 +2,9 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
 <entry key="gui_branchtable_columns_branch">Nome do Branch</entry>
-<entry key="gui_branchtable_columns_lastsetup">Último setup</entry>
-<entry key="gui_branchtable_columns_make">Make</entry>
-<entry key="gui_branchtable_columns_setup">Setup</entry>
+<entry key="gui_branchtable_columns_lastsetup">Última atualização</entry>
+<entry key="gui_branchtable_columns_make">Compilação</entry>
+<entry key="gui_branchtable_columns_setup">Atualização</entry>
 <entry key="gui_branchtable_defval_lastsetup">Desconhecido</entry>
 <entry key="gui_errhelper_155004">Na raíz da sua base, faça um SVN Cleanup para quebrar locks, um vissetup e, se requisitado, insira sua senha de usuário.</entry>
 <entry key="gui_errhelper_200033">Algum(ns) outro(s) programa(s) está(ão) operando sobre sua base. Use software from LockHunter para identificá-lo(s) e liberar os locks da base.</entry>
@@ -12,10 +12,10 @@
 <entry key="gui_errmsg_accesskeylabelstringfailed">Não foi possível acessar string %s.</entry>
 <entry key="gui_errmsg_failedcleanup">Não foi possível limpar (se livrar de locks) branch %s</entry>
 <entry key="gui_errmsg_failedmake">Não foi possível compilar branch %s</entry>
-<entry key="gui_errmsg_failedsetup">Não foi possível realizar setup no branch %s</entry>
+<entry key="gui_errmsg_failedsetup">Não foi possível atualizar branch %s</entry>
 <entry key="gui_errmsg_gp_default_resetfailed">Não foi possível reverter preferência para valor padrão.</entry>
-<entry key="gui_errmsg_incoherentdate">Timestamp de último setup incoerente</entry>
-<entry key="gui_errmsg_launcher_emptyjob">Nenhuma rotina de setup ou make foi realizada.</entry>
+<entry key="gui_errmsg_incoherentdate">Timestamp de última atualização incoerente</entry>
+<entry key="gui_errmsg_launcher_emptyjob">Nenhuma rotina de atualização ou compilação foi realizada.</entry>
 <entry key="gui_errmsg_launcher_invalidfolder">%s não é um diretório SVN válido.</entry>
 <entry key="gui_errmsg_launcher_log_badformat">Histórico com má formação: muito poucos argumentos na linha</entry>
 <entry key="gui_errmsg_launcher_log_openfailed">Não foi possível abrir arquivo de log.</entry>
@@ -42,10 +42,10 @@
 <entry key="gui_menubar_edit_menu">Editar</entry>
 <entry key="gui_menubar_edit_preferences">Configurações...</entry>
 <entry key="gui_menubar_make_all">Compilar todas as bases</entry>
-<entry key="gui_menubar_make_menu">Make</entry>
+<entry key="gui_menubar_make_menu">Compilar</entry>
 <entry key="gui_menubar_make_none">Compilar nenhuma base</entry>
 <entry key="gui_menubar_setup_all">Atualizar todas as bases</entry>
-<entry key="gui_menubar_setup_menu">Setup</entry>
+<entry key="gui_menubar_setup_menu">Atualizar</entry>
 <entry key="gui_menubar_setup_none">Atualizar nenhuma base</entry>
 <entry key="gui_notification_launcher_clean_fail">Branch %s não conseguiu se livrar de locks.</entry>
 <entry key="gui_notification_launcher_clean_success">Branch %s está limpa de locks.</entry>
@@ -56,8 +56,8 @@
 <entry key="gui_notification_launcher_setup_success">Branch %s está atualizada.</entry>
 <entry key="gui_notification_title">Jabuti</entry>
 <entry key="gui_popup_about_title">Sobre</entry>
-<entry key="gui_popup_log_action_make">Make</entry>
-<entry key="gui_popup_log_action_setup">Setup</entry>
+<entry key="gui_popup_log_action_make">Compilação</entry>
+<entry key="gui_popup_log_action_setup">Atualização</entry>
 <entry key="gui_popup_log_allactions">Todas as ações</entry>
 <entry key="gui_popup_log_allbranches">Todas as branches</entry>
 <entry key="gui_popup_log_col_branch">Branch</entry>
@@ -65,7 +65,7 @@
 <entry key="gui_popup_log_col_desc">Descrição</entry>
 <entry key="gui_popup_log_desc_make_hms">Compilado em %02d horas %02d min %02d s</entry>
 <entry key="gui_popup_log_desc_make_ms">Compilado em %02d min %02d s</entry>
-<entry key="gui_popup_log_desc_setup">Setup %s → %s (+%d)</entry>
+<entry key="gui_popup_log_desc_setup">Atualizado %s → %s (+%d)</entry>
 <entry key="gui_popup_log_title">Histórico</entry>
 <entry key="gui_popup_preferences_applymsg_error">Não foi possível salvar configuração.</entry>
 <entry key="gui_popup_preferences_applymsg_invalid">Valor inválido de configuração.</entry>
@@ -74,18 +74,18 @@
 <entry key="gui_popup_preferences_btn_apply">Aplicar</entry>
 <entry key="gui_popup_preferences_btn_cancel">Cancelar</entry>
 <entry key="gui_popup_preferences_btn_restore">Restaurar padrão</entry>
-<entry key="gui_popup_preferences_proplabel_cleanups">Número de limpezas pré-setup</entry>
+<entry key="gui_popup_preferences_proplabel_cleanups">Número de limpezas pré-atualização</entry>
 <entry key="gui_popup_preferences_proplabel_lang">Idioma</entry>
 <entry key="gui_popup_preferences_proplabel_makecmd">Comando de compilação</entry>
 <entry key="gui_popup_preferences_proplabel_maxthreads">Número máximo de threads</entry>
 <entry key="gui_popup_preferences_proplabel_notify">Notificações</entry>
 <entry key="gui_popup_preferences_proplabel_path">Diretório raiz</entry>
-<entry key="gui_popup_preferences_propoption_makecmd_mlld">Make Library Debug</entry>
-<entry key="gui_popup_preferences_propoption_makecmd_mllda">Make Library Debug App</entry>
-<entry key="gui_popup_preferences_propoption_makecmd_mlldad">Make Library Debug App Debug</entry>
-<entry key="gui_popup_preferences_propoption_makecmd_mlldadmt">Make Library Debug App Debug Multi-Threaded</entry>
-<entry key="gui_popup_preferences_propoption_makecmd_mlldamt">Make Library Debug App Multi-Threaded</entry>
-<entry key="gui_popup_preferences_propoption_makecmd_mlldmt">Make Library Debug Multi-Threaded</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlld">Compilar com Depuração</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mllda">Compilar com Depuração + Aplicação</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldad">Compilar com Depuração + Aplicação com Depuração</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldadmt">Compilar com Depuração + Aplicação com Depuração Multi-Threaded</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldamt">Compilar com Depuração + Aplicação Multi-Threaded</entry>
+<entry key="gui_popup_preferences_propoption_makecmd_mlldmt">Compilar com Depuração Multi-Threaded</entry>
 <entry key="gui_popup_preferences_title">Configurações</entry>
 <entry key="gui_popup_preferences_type_dir_dlg_btnlabel">Abrir</entry>
 <entry key="gui_popup_preferences_type_dir_dlg_title">Abrir um diretório</entry>
